=================
Changes for Crate
=================

Unreleased
==========

 - Fixed a race condition that could cause `DROP TABLE IF EXISTS` statements to
   get stuck

 - Fixed a race condition that could cause queries with a high limit to fail
   due to a missing job context.

 - Fixed an issue that caused COPY TO `s3` statements to get stuck

 - Fixed an issue which results in _id queries not matching on
   partitioned and clustered tables without primary key columns.

2015/07/07 0.49.5
=================

 - Fixed issue that could lead to a NullPointerException
   caused by reporting row results to handler node before merge phase on handler
   was started

 - Fixed an issue that could cause concurrent queries on information_schema or
   sys tables to return inconsistent results

 - Fixed a rare race condition that could cause some queries with offset + limit higher
   than 1_000_000 to return too few rows

 - Fixed a possible race condition which leads to the execution of a
   non-distributed group by instead of a distributed one.

 - Fix: IS NULL predicate in query could return records that have already been
   marked for deletion

 - Fixed hash collide in fetch requests to avoid collision of node identifiers

2015/06/30 0.49.4
=================

 - Fixed an issue that could lead to unclosed contexts when issuing bulk requests

 - Fixed an issue that could lead to deadlock and therefore freezing of a node
   when there where too many queries asking for routing information in parallel.

 - Fix: Querying from information_schema while a table is created could
   cause an error

 - Fixed a NPE that was thrown if a SELECT statement contained `_score` in the
   result columns and an ORDER BY clause.

 - Fix: selecting error from sys.jobs_log caused a NPE in some cases

 - Fix: load Crate plugins only once on node start

 - Fixed an issue that caused nodes fail to start if `node.client` was set to true.
